@@ -1,5 +1,8 @@
 2008-Aug-22  yselkowitz
 
+	* bin/cygport.in (__mkdirs, __finish): Managed mounts are extinct.
+	bin/Makefile.am: Do not install make_managed_mount.
+
 	* bin/cygport.in: Only run on Cygwin 1.7.
 
 	* bin/cygport.in (__prepinfo): Compress only *.info* files.
